Honor umask setting when saving mails.

BUG: 232001

Thanks to Jörg Steffens <joerg.steffens at dass-it dot de> for the patch!
I modified the patch slightly, to take into account duplicated code in
viewer_p.cpp and Ingo's suggestions.

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1116206